; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_SelectTitle.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_SelectTitle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_title = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_player_SelectTitle(i32* %0, %struct.vlc_player_title* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.vlc_player_title*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.vlc_player_title* %1, %struct.vlc_player_title** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.vlc_player_title*, %struct.vlc_player_title** %4, align 8
  %8 = call i32 @vlc_player_GetTitleIdx(i32* %6, %struct.vlc_player_title* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @vlc_player_SelectTitleIdx(i32* %12, i32 %13)
  br label %15

15:                                               ; preds = %11, %2
  ret void
}

declare dso_local i32 @vlc_player_GetTitleIdx(i32*, %struct.vlc_player_title*) #1

declare dso_local i32 @vlc_player_SelectTitleIdx(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
